--- a/NodeJs/public/index.html
+++ b/NodeJs/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Snake Eater Online</title>
+    <title>Proyectos 2</title>
     <script src="libraries/socket.io-1.4.5.js" type="text/javascript"></script>
     <script src="libraries/p5.js" type="text/javascript"></script>
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
@@ -12,8 +12,11 @@
       body {
         padding: 2px;
       }
+      
     </style>
   </head>
   <body>
+      <button onClick="addXFactor()">Ampliar</button>
+      <button onClick="subXFactor()">Disminuir</button>
   </body>
 </html>
