--- a/Juego/public/index.html
+++ b/Juego/public/index.html
@@ -6,8 +6,11 @@
     <script src="libraries/socket.io-1.4.5.js" type="text/javascript"></script>
     <script src="libraries/p5.js" type="text/javascript"></script>
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
+    
+    <script src="cell.js" type="text/javascript"></script>
+    <script src="player.js" type="text/javascript"></script>
+    <script src="target.js" type="text/javascript"></script>
     <script src="client.js" type="text/javascript"></script>
-
     <style>
       body {
         padding: 2px;
