--- a/Car Game/public/index.html
+++ b/Car Game/public/index.html
@@ -4,13 +4,6 @@
     <meta charset="UTF-8">
     <title>Proyectos 2</title>
     <script src="libraries/socket.io-1.4.5.js" type="text/javascript"></script>
-    <script src="libraries/p5.js" type="text/javascript"></script>
-    <script src="libraries/p5.dom.js" type="text/javascript"></script>
-    <script src="car.js" type="text/javascript"></script>
-    <script src="tool.js" type="text/javascript"></script>
-    <script src="client.js" type="text/javascript"></script>
-    
-
     <style>
       body {
         padding: 2px;
@@ -19,5 +12,18 @@
     </style>
   </head>
   <body>
+        <script>
+            console.log('hola')
+            /*socket = io.connect('http://localhost:3000');
+            socket.on('checkMe', function(id){
+                console.log(id);
+                if(id == 1){
+                    //document.location.href = "./game.html";
+                } else {
+                    //document.location.href = "./phone.html";
+                }
+                
+            });*/
+        </script>
   </body>
 </html>
