telefono y juego listo para probar

--- a/Car Game/public/game.html
+++ b/Car Game/public/game.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>Proyectos 2</title>
-    <script src="./public/libraries/socket.io-1.4.5.js" type="text/javascript"></script>
-    <script src="./public/libraries/p5.js" type="text/javascript"></script>
-    <script src="./public/libraries/p5.dom.js" type="text/javascript"></script>
+    <script src="./public/assets/libraries/socket.io-1.4.5.js" type="text/javascript"></script>
+    <script src="./public/assets/libraries/p5.js" type="text/javascript"></script>
+    <script src="./public/assets/libraries/p5.dom.js" type="text/javascript"></script>
+    <script src="./public/assets/libraries/p5.sound.js" type="text/javascript"></script>
     <script src="./public/assets/js/game/car.js" type="text/javascript"></script>
     <script src="./public/assets/js/game/tool.js" type="text/javascript"></script>
     <script src="./public/assets/js/game/client.js" type="text/javascript"></script>
